# KinoWeek

./: .gitignore  README.md  prompt.xml  pyproject.toml  schedule.json  scrape_movies.py
docs/: architecture.md  extension-strategy.md  frontend-plan.md  local_testing.md  mvp_plan.md  plan.md  progress.md
output/: latest_message.txt
src/kinoweek/: __init__.py  aggregator.py  config.py  csv_exporters.py  exporters.py  formatting.py  main.py  models.py  notifier.py  output.py  scraper.py  scrapers.py  sources.toml
src/kinoweek/_archive/: scrapers.py
src/kinoweek/sources/: __init__.py  base.py
src/kinoweek/sources/cinema/: __init__.py  astor.py
src/kinoweek/sources/concerts/: __init__.py  bei_chez_heinz.py  capitol.py  faust.py  musikzentrum.py  pavillon.py  swiss_life_hall.py  zag_arena.py
tests/: test_scraper.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.mjs
web/src/components/: ConcertCard.astro  DateHeader.astro  Footer.astro  Header.astro  MovieCard.astro  SectionHeader.astro
web/src/data/: loader.ts  mock.ts  types.ts
web/src/layouts/: Base.astro
web/src/pages/: index.astro
web/src/styles/: global.css
